# Coyote_PipeRec-Piyumi

examples/06_gpu_p2p/sw/src/: main.cpp
examples/09_preprocess_gpu_p2p/pointer_to_tensor/: setup.py  setup_new.py  test  test.cpp  wrap_ptr.cpp
examples/09_preprocess_gpu_p2p/sw/: CMakeLists.txt
examples/09_preprocess_gpu_p2p/sw/src/: fpga_p2p_pybind.cpp  fpga_p2p_pybind_current.cpp
examples/09_preprocess_multiple_streams/hw/: CMakeLists.txt
examples/09_preprocess_multiple_streams/hw/src/: vfpga_top.svh
examples/09_preprocess_multiple_streams/hw/src/hls/hls_vadd/: hls_vadd.cpp  hls_vadd.hpp
examples/09_preprocess_multiple_streams/sw/src/: main.cpp
examples/09_preprocess_single_rdma/hw/src/hls/hls_vadd/: hls_vadd.cpp  hls_vadd_dense.cpp  hls_vadd_dense.hpp  hls_vadd_inline.cpp  hls_vadd_inline.hpp  hls_vadd_route_passthrough.cpp  hls_vadd_route_passthrough.hpp
examples/09_preprocess_single_rdma/sw/src/: main.cpp  main_original.cpp
examples/09_preprocess_single_rdma/sw/src/client/: my_main.cpp
examples/09_preprocess_single_stream/hw/src/hls/hls_vadd/: hls_vadd.cpp
examples/09_preprocess_single_stream/sw/: CMakeLists_single_stream.txt
examples/09_preprocess_single_stream/sw/src/: fpga_p2p_pybind.cpp  main.cpp  main_cpu_fpga_gpu.cpp  main_current.cpp  main_gpu_fpga_gpu.cpp  main_modified.cpp  main_tmp.cpp  main_works.cpp
